2013-11-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c (grub_ahci_pciinit): Detect ATAPI devices.
	* grub-core/disk/ata.c (grub_ata_identify): Use atapi_identify if
	device is known to be ATAPI.

2013-11-03  Mike Frysinger <vapier>

	* configure.ac: Don't add target-prefix.

2013-11-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/loadenv.c (grub_cmd_save_env): Remove unset
	variables.

2013-11-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c (grub_gettext_init_ext): Ignore errors
	if language is English.

2013-11-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/linux/getroot.c: Fix cast-align problems.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Don't add -m32/-m64 on emu.

2013-11-02  neil

	* grub-core/osdep/linux/blocklist.c: Include linux/types.h for some
	broken linux headers.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/30_os-prober.in: Add unhiding of partition if on msdos.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (grub_reed_solomon_recover): Don't do
	Reed-Solomon recovery if more than half of redundancy info is 0.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mount.c: Handle symlinks to directories.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (find_file): Save ctx->next when calling
	find_file recursively for symlink.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Copy themes.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimagexx.c (locate_sections): Reject mislinked images.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Use 0x8000 for address instead of 8000.

2013-11-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/sparc64/ieee1275/linux.c (get_physbase): Fix
	signature.
