@@ -1,5 +1,9 @@
 2013-11-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/verify.c: Add RSA support.
+
+2013-11-03  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/disk/ahci.c (grub_ahci_pciinit): Detect ATAPI devices.
 	* grub-core/disk/ata.c (grub_ata_identify): Use atapi_identify if
 	device is known to be ATAPI.
